# pfgen-bench

./: LICENSE  Makefile  README.md  pfgen.py  pfgen_eval.py  pfgen_report.py  pyproject.toml  run-gemini.py  run-hf.py  run-manual.py  run-openai.py  run-vllm.py
.github/workflows/: lint.yaml  sync-archive-to-main.yml  sync-archive-to-master.yml
data/: .gitignore  Q01.json  Q02.json  Q03.json  Q04.json  Q05.json  Q06.json  Q07.json  Q08.json  Q09.json  Q10.json  Q11.json  Q12.json  Q13.json  Q14.json  Q15.json  Q16.json  Q17.json  Q18.json  Q19.json  Q20.json  Q21.json  Q22.json  Q23.json  Q24.json  Q25.json  Q26.json  Q27.json  Q28.json  Q29.json  Q30.json  Q31.json  Q32.json  Q33.json  Q34.json  Q35.json  Q36.json  Q37.json  Q38.json  Q39.json  (+16 more)
data/final/: .gitignore  Q01-R.jsonl  Q02-P.jsonl  Q03-P.jsonl  Q04-P.jsonl  Q04-S.jsonl  Q04-T.jsonl  Q05-P.jsonl  Q05-S.jsonl  Q05-T.jsonl  Q06-P.jsonl  Q06-S.jsonl  Q06-T.jsonl  Q07-P.jsonl  Q08-P.jsonl  Q09-P.jsonl  Q10-R.jsonl  Q11-P.jsonl  Q11-S.jsonl  Q11-T.jsonl  Q12-P.jsonl  Q12-S.jsonl  Q12-T.jsonl  Q13-P.jsonl  Q13-S.jsonl  Q13-T.jsonl  Q14-P.jsonl  Q14-S.jsonl  Q14-T.jsonl  Q15-P.jsonl  Q15-S.jsonl  Q15-T.jsonl  Q16-P.jsonl  Q16-S.jsonl  Q17-P.jsonl  Q17-S.jsonl  Q17-T.jsonl  Q18-P.jsonl  Q18-S.jsonl  Q18-T.jsonl  (+91 more)
data/meta/: Q01.json  Q02.json  Q03.json  Q04.json  Q05.json  Q06.json  Q07.json  Q08.json  Q09.json  Q10.json  Q11.json  Q12.json  Q13.json  Q14.json  Q15.json  Q16.json  Q17.json  Q18.json  Q19.json  Q20.json  Q21.json  Q22.json  Q23.json  Q24.json  Q25.json  Q26.json  Q27.json  (+23 more)
result/: .gitignore
(+2177 files in other folders)
