[project]
name = "pfgen-bench"
version = "0.1.0"
description = "Preferred Generation Benchmark"
authors = [
    {name = "imos", email = "173752+imos@users.noreply.github.com"}
]
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
